force-app/main/default/objects/Purchase_Request__c/Purchase_Request__c.object-meta.xml
<CustomObject>
    <label>Purchase Request</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>PR No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>