force-app/main/default/objects/Purchase_Request__c/fields/Approve_Reject__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reject__c</fullName>
    <label>Approve / Reject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>