force-app/main/default/objects/Purchase_Request__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Purchase Requests</relationshipLabel>
    <relationshipName>Purchase_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>