force-app/main/default/objects/Purchase_Request__c/fields/Asset_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Record_Type__c</fullName>
    <formula>Asset__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Record Type</label>
    <type>Text</type>
</CustomField>