force-app/main/default/objects/Purchase_Request__c/fields/Assets_Current_Unit__c.field-meta.xml
<CustomField>
    <fullName>Assets_Current_Unit__c</fullName>
    <formula>Asset__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assets Current Unit</label>
    <type>Text</type>
</CustomField>