force-app/main/default/objects/Purchase_Request__c/fields/Bin_Location_del__c.field-meta.xml
<CustomField>
    <fullName>Bin_Location_del__c</fullName>
    <description>Location in the Source Inventory Item</description>
    <formula>Source_Store_Item__r.Bin_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bin Location</label>
    <type>Text</type>
</CustomField>