force-app/main/default/objects/Purchase_Request__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Defective</fullName>
            </value>
            <value>
                <fullName>Dispute Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>