force-app/main/default/objects/Purchase_Request__c/fields/Cost_Allocation_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_Allocation_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Allocation Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Purchase Requests (Cost Allocation Unit)</relationshipLabel>
    <relationshipName>Purchase_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>