force-app/main/default/objects/Purchase_Request__c/fields/Cost_Approved__c.field-meta.xml
<CustomField>
    <fullName>Cost_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ticked when all approvers have approved cost</inlineHelpText>
    <label>Cost Approved</label>
    <type>Checkbox</type>
</CustomField>