force-app/main/default/objects/Purchase_Request__c/fields/Cost_Price_GST_exc__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_GST_exc__c</fullName>
    <description>Cost Price formula will be based on the value of Cost Price (without quote) OR Quote_Item__r.Cost_Price_GST_exc__c</description>
    <formula>IF(NOT(ISBLANK( Item__c )) &amp;&amp; Item__r.Cost_Price__c != 0
  , Item__r.Cost_Price__c
  , IF(Quoted_Cost_Price__c &gt; 0, 
    Quoted_Cost_Price__c ,
    IF(NOT( ISBLANK( Quote_Item__c ) ), 
      Quote_Item__r.Cost_Price_GST_exc__c, 
      Cost_Price_without_quote__c 
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Price (GST exc) - Not Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>