force-app/main/default/objects/Purchase_Request__c/fields/Cost_Price_without_quote__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_without_quote__c</fullName>
    <label>Cost Price (without quote)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>