force-app/main/default/objects/Purchase_Request__c/fields/Created_by_me__c.field-meta.xml
<CustomField>
    <fullName>Created_by_me__c</fullName>
    <formula>IF(NOT(ISBLANK(Destination_Store__c)),
  IF( (Destination_Store__r.Manager__c = $User.Id) || ( Destination_Store__r.Unit_Manager__c = $User.Id) || (CreatedById = $User.Id) , TRUE, FALSE),
  IF(CreatedById = $User.Id , TRUE, FALSE)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by me</label>
    <type>Checkbox</type>
</CustomField>