force-app/main/default/objects/Purchase_Request__c/fields/Created_by_User__c.field-meta.xml
<CustomField>
    <fullName>Created_by_User__c</fullName>
    <formula>$User.Id = CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by User</label>
    <type>Checkbox</type>
</CustomField>