force-app/main/default/objects/Purchase_Request__c/fields/Creation_Type__c.field-meta.xml
<CustomField>
    <fullName>Creation_Type__c</fullName>
    <label>Creation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Inventory Item</fullName>
            </value>
            <value>
                <fullName>Inventory Item - Taken from Local Unit</fullName>
            </value>
            <value>
                <fullName>Inventory Item - Ordered from Base Store</fullName>
            </value>
            <value>
                <fullName>New Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>