force-app/main/default/objects/Purchase_Request__c/fields/Credit_Card_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card Purchase</label>
    <type>Checkbox</type>
</CustomField>