force-app/main/default/objects/Purchase_Request__c/fields/Current_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver_Name__c</fullName>
    <label>Current Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>