force-app/main/default/objects/Purchase_Request__c/fields/Date_Sent_for_In_Transit__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_for_In_Transit__c</fullName>
    <label>Date Sent (for In Transit)</label>
    <type>DateTime</type>
</CustomField>