force-app/main/default/objects/Purchase_Request__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>Group costs into reporting departments.</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Fuel (Fuels &amp; Oils)</fullName>
            </value>
            <value>
                <fullName>Corporate Overheads</fullName>
            </value>
            <value>
                <fullName>Trades - Elec</fullName>
            </value>
            <value>
                <fullName>Trades - Mec</fullName>
            </value>
            <value>
                <fullName>Trades - Fab</fullName>
            </value>
            <value>
                <fullName>Breakdown</fullName>
                <isActive>false</isActive>
                <label>Breakdown</label>
            </value>
            <value>
                <fullName>New Assets</fullName>
                <isActive>false</isActive>
                <label>New Assets</label>
            </value>
            <value>
                <fullName>Trades</fullName>
                <isActive>false</isActive>
                <label>Trades</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>