force-app/main/default/objects/Purchase_Request__c/fields/Destination_Brand__c.field-meta.xml
<CustomField>
    <fullName>Destination_Brand__c</fullName>
    <formula>IF(ISBLANK(Destination_Store__c), &quot;No Destination Brand&quot;, Destination_Store__r.Account_Brand__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination (Brand)</label>
    <type>Text</type>
</CustomField>