force-app/main/default/objects/Purchase_Request__c/fields/Destination_Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Destination_Requested_by__c</fullName>
    <formula>IF( ISBLANK(Destination_Store__c),  CreatedBy.FirstName + &quot; &quot; +  CreatedBy.LastName  ,  Destination_Store__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination (Requested by)</label>
    <type>Text</type>
</CustomField>