force-app/main/default/objects/Purchase_Request__c/fields/Destination_Store__c.field-meta.xml
<CustomField>
    <fullName>Destination_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Unit that will receive this item or service</description>
    <inlineHelpText>Unit/Location</inlineHelpText>
    <label>Destination Store</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Purchase Requests (Destination Store)</relationshipLabel>
    <relationshipName>Purchase_Requests_Destination</relationshipName>
    <type>Lookup</type>
</CustomField>