force-app/main/default/objects/Purchase_Request__c/fields/Destination_Store_Item__c.field-meta.xml
<CustomField>
    <fullName>Destination_Store_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Store Item</label>
    <referenceTo>Store_Item__c</referenceTo>
    <relationshipLabel>Purchase Requests (Destination Store Item)</relationshipLabel>
    <relationshipName>Purchase_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>