force-app/main/default/objects/Purchase_Request__c/fields/Details_for_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Details_for_Supplier__c</fullName>
    <label>Details for Supplier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>