force-app/main/default/objects/Purchase_Request__c/fields/Dispute_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Reason__c</fullName>
    <label>Dispute Reason</label>
    <type>TextArea</type>
</CustomField>