force-app/main/default/objects/Purchase_Request__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <description>Expected Date</description>
    <inlineHelpText>Expected Date</inlineHelpText>
    <label>ETA</label>
    <type>Date</type>
</CustomField>