force-app/main/default/objects/Purchase_Request__c/fields/Fourth_Approver__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fourth Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>