force-app/main/default/objects/Purchase_Request__c/fields/Freight_Collected_By__c.field-meta.xml
<CustomField>
    <fullName>Freight_Collected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freight Collected By</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Purchase Requests</relationshipLabel>
    <relationshipName>Purchase_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>