force-app/main/default/objects/Purchase_Request__c/fields/Freight_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Freight_Collection_Status__c</fullName>
    <label>Freight Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Collection</fullName>
            </value>
            <value>
                <fullName>Service (No Collection)</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>