force-app/main/default/objects/Purchase_Request__c/fields/Freight_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Freight_Dimensions__c</fullName>
    <label>Freight Dimensions</label>
    <length>225</length>
    <type>Text</type>
</CustomField>