force-app/main/default/objects/Purchase_Request__c/fields/Freight_Location__c.field-meta.xml
<CustomField>
    <fullName>Freight_Location__c</fullName>
    <label>Freight Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toowoomba</fullName>
            </value>
            <value>
                <fullName>Chinchilla</fullName>
            </value>
            <value>
                <fullName>Dalby</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Roma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>