force-app/main/default/objects/Purchase_Request__c/fields/Freight_Notes__c.field-meta.xml
<CustomField>
    <fullName>Freight_Notes__c</fullName>
    <inlineHelpText>Info from the supplier on the notes</inlineHelpText>
    <label>Freight Notes</label>
    <length>225</length>
    <type>Text</type>
</CustomField>