force-app/main/default/objects/Purchase_Request__c/fields/Freight_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_Type__c</fullName>
    <label>Freight Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freight - Other</fullName>
            </value>
            <value>
                <fullName>Freight - Overseas</fullName>
            </value>
            <value>
                <fullName>Freight – WD</fullName>
            </value>
            <value>
                <fullName>Freight - Maney’s</fullName>
            </value>
            <value>
                <fullName>Local - Delivery</fullName>
            </value>
            <value>
                <fullName>Local - Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>