force-app/main/default/objects/Purchase_Request__c/fields/From_Order__c.field-meta.xml
<CustomField>
    <fullName>From_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will determine if the Purchase Request will go to Purchase Order process.</description>
    <label>From Order</label>
    <type>Checkbox</type>
</CustomField>