force-app/main/default/objects/Purchase_Request__c/fields/Is_PR_admin__c.field-meta.xml
<CustomField>
    <fullName>Is_PR_admin__c</fullName>
    <formula>$Permission.Purchase_Request_Administrator_Permission_Set</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PR admin</label>
    <type>Checkbox</type>
</CustomField>