force-app/main/default/objects/Purchase_Request__c/fields/is_PR_Approver__c.field-meta.xml
<CustomField>
    <fullName>is_PR_Approver__c</fullName>
    <formula>IF(  Purchase_Request_Approver__c =  $User.Id ,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is PR Approver</label>
    <type>Checkbox</type>
</CustomField>