force-app/main/default/objects/Purchase_Request__c/fields/Is_Source_Non_Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Source_Non_Inventory_Item__c</fullName>
    <formula>IF(ISBLANK( Source_Store__c ) ,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Source Non-Inventory Item</label>
    <type>Checkbox</type>
</CustomField>