force-app/main/default/objects/Purchase_Request__c/fields/Is_Submitter_the_Approver__c.field-meta.xml
<CustomField>
    <fullName>Is_Submitter_the_Approver__c</fullName>
    <formula>IF( ISBLANK( Destination_Store__c ) ,
   IF( CreatedById =  Purchase_Request_Approver__c , TRUE, FALSE),
   IF(  Destination_Store__r.Unit_Manager__c =  Purchase_Request_Approver__c , TRUE, FALSE)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Submitter the Approver</label>
    <type>Checkbox</type>
</CustomField>