force-app/main/default/objects/Purchase_Request__c/fields/isFirstLastApprover__c.field-meta.xml
<CustomField>
    <fullName>isFirstLastApprover__c</fullName>
    <formula>IF( AND(NOT(ISBLANK( First_Approver__c )), IsFirstLimitLessthanTotalCost__c,  NOT( IsSecondLimitLessthanTotalCost__c )), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isFirstLastApprover</label>
    <type>Checkbox</type>
</CustomField>