force-app/main/default/objects/Purchase_Request__c/fields/IsFirstLimitLessthanTotalCost__c.field-meta.xml
<CustomField>
    <fullName>IsFirstLimitLessthanTotalCost__c</fullName>
    <description>FLOOR value</description>
    <formula>IF(AND(First_Approver_Limit__c &lt;=  Total_Cost_Price_GST_exc__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsFirstLimitLessthanTotalCost</label>
    <type>Checkbox</type>
</CustomField>