force-app/main/default/objects/Purchase_Request__c/fields/isFourthLimitLessthanTotalCost__c.field-meta.xml
<CustomField>
    <fullName>isFourthLimitLessthanTotalCost__c</fullName>
    <description>FLOOR value</description>
    <formula>IF(AND(Fourth_Approver_Limit__c &gt; 0, Fourth_Approver_Limit__c &lt;=  Total_Cost_Price_GST_exc__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isFourthLimitLessthanTotalCost</label>
    <type>Checkbox</type>
</CustomField>