force-app/main/default/objects/Purchase_Request__c/fields/isSecondLastApprover__c.field-meta.xml
<CustomField>
    <fullName>isSecondLastApprover__c</fullName>
    <formula>IF( AND(NOT(ISBLANK( Second_Approver__c )), IsSecondLimitLessthanTotalCost__c , NOT( isThirdLimitLessthanTotalCost__c )), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isSecondLastApprover</label>
    <type>Checkbox</type>
</CustomField>