force-app/main/default/objects/Purchase_Request__c/fields/IsSecondLimitLessthanTotalCost__c.field-meta.xml
<CustomField>
    <fullName>IsSecondLimitLessthanTotalCost__c</fullName>
    <description>FLOOR value</description>
    <formula>IF(AND(Second_Approver_Limit__c &gt; 0, Second_Approver_Limit__c &lt;=  Total_Cost_Price_GST_exc__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSecondLimitLessthanTotalCost</label>
    <type>Checkbox</type>
</CustomField>