force-app/main/default/objects/Purchase_Request__c/fields/isThirdLastApprover__c.field-meta.xml
<CustomField>
    <fullName>isThirdLastApprover__c</fullName>
    <formula>IF( AND(NOT(ISBLANK( Third_Approver__c )), isThirdLimitLessthanTotalCost__c , NOT( isFourthLimitLessthanTotalCost__c )), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isThirdLastApprover</label>
    <type>Checkbox</type>
</CustomField>