force-app/main/default/objects/Purchase_Request__c/fields/isThirdLimitLessthanTotalCost__c.field-meta.xml
<CustomField>
    <fullName>isThirdLimitLessthanTotalCost__c</fullName>
    <description>FLOOR value</description>
    <formula>IF(AND(Third_Approver_Limit__c &gt; 0, Third_Approver_Limit__c &lt;=  Total_Cost_Price_GST_exc__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isThirdLimitLessthanTotalCost</label>
    <type>Checkbox</type>
</CustomField>