force-app/main/default/objects/Purchase_Request__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Purchase Requests</relationshipLabel>
    <relationshipName>Purchase_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>