force-app/main/default/objects/Purchase_Request__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <formula>TEXT(Item__r.Item_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Category</label>
    <type>Text</type>
</CustomField>