force-app/main/default/objects/Purchase_Request__c/fields/Item_Master_Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Cost_Category__c</fullName>
    <formula>TEXT(Item__r.Cost_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Master Cost Category</label>
    <type>Text</type>
</CustomField>