force-app/main/default/objects/Purchase_Request__c/fields/Item_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Item_Name_Formula__c</fullName>
    <formula>IF(NOT(ISBLANK( New_Item_Name__c )) &amp;&amp; ISBLANK( Item__c ) ,
New_Item_Name__c,Item__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Name</label>
    <type>Text</type>
</CustomField>