force-app/main/default/objects/Purchase_Request__c/fields/Manifest_No__c.field-meta.xml
<CustomField>
    <fullName>Manifest_No__c</fullName>
    <label>Manifest No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>