force-app/main/default/objects/Purchase_Request__c/fields/Multiple_Quote_Creation__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Quote_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Quote Creation - Not Needed</label>
    <type>Checkbox</type>
</CustomField>