force-app/main/default/objects/Purchase_Request__c/fields/Needs_My_Approval__c.field-meta.xml
<CustomField>
    <fullName>Needs_My_Approval__c</fullName>
    <formula>IF( 
or( 
( Purchase_Request_Approver__c =  $User.Id &amp;&amp;  (
ISPICKVAL(Status__c , &quot;Submitted&quot;) || ISPICKVAL(Status__c , &quot;APPROVER REVIEW&quot;) || (  ISPICKVAL(Status__c , &quot;FOR APPROVAL - REVIEW COMPLETE&quot;)
) )),  
($Permission.Purchase_Request_Administrator_Permission_Set  &amp;&amp; ISPICKVAL(Status__c , &quot;FOR ITEM REVIEW&quot;)
)
) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs My Approval</label>
    <type>Checkbox</type>
</CustomField>