force-app/main/default/objects/Purchase_Request__c/fields/New_Item_Formula__c.field-meta.xml
<CustomField>
    <fullName>New_Item_Formula__c</fullName>
    <formula>IF(NOT(ISBLANK( New_Item_Name__c )) &amp;&amp; ISBLANK( Item__c ) ,
TRUE
,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Item</label>
    <type>Checkbox</type>
</CustomField>