force-app/main/default/objects/Purchase_Request__c/fields/New_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Item_Name__c</fullName>
    <label>New Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>