force-app/main/default/objects/Purchase_Request__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <formula>IF(  New_Item_Formula__c , &apos;&apos;,  Item__r.Supplier_Part_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>