force-app/main/default/objects/Purchase_Request__c/fields/PO_Creation_Checker__c.field-meta.xml
<CustomField>
    <fullName>PO_Creation_Checker__c</fullName>
    <description>0 = No Error
1 = No Supplier and with PO
2 = No Supplier
3 = with PO (Not Cancelled)</description>
    <formula>IF(ISBLANK(Supplier__c) &amp;&amp; NOT(ISBLANK(PO_Status__c)) &amp;&amp; PO_Status__c != &apos;Cancelled&apos;, 1,
  IF(ISBLANK(Supplier__c), 2,
    IF(NOT(ISBLANK(PO_Status__c)) &amp;&amp; PO_Status__c != &apos;Cancelled&apos;, 3, 0)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Creation Checker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>