force-app/main/default/objects/Purchase_Request__c/fields/PO_Link__c.field-meta.xml
<CustomField>
    <fullName>PO_Link__c</fullName>
    <formula>IF(  ISBLANK(Purchase_Order__c) , &quot;&quot;, HYPERLINK( &quot;/&quot;+Purchase_Order__c , &quot;Link to Purchase Order&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Link</label>
    <type>Text</type>
</CustomField>