force-app/main/default/objects/Purchase_Request__c/fields/PO_Number_not_synched__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_not_synched__c</fullName>
    <formula>IF( PO_Number__c !=  Purchase_Order__r.Name , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Number not synched</label>
    <type>Checkbox</type>
</CustomField>