force-app/main/default/objects/Purchase_Request__c/fields/PO_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Status__c</fullName>
    <formula>IF(TEXT( Purchase_Order__r.Status__c) = &apos;Canceled&apos;, &apos;Cancelled&apos;, TEXT( Purchase_Order__r.Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Status</label>
    <type>Text</type>
</CustomField>