force-app/main/default/objects/Purchase_Request__c/fields/PR_approver__c.field-meta.xml
<CustomField>
    <fullName>PR_approver__c</fullName>
    <formula>Purchase_Request_Approver__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR approver</label>
    <type>Text</type>
</CustomField>