force-app/main/default/objects/Purchase_Request__c/fields/PR_Cost_Price_GST_exc__c.field-meta.xml
<CustomField>
    <fullName>PR_Cost_Price_GST_exc__c</fullName>
    <label>PR Cost Price (GST exc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>