force-app/main/default/objects/Purchase_Request__c/fields/Process_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Process_Approval_Comments__c</fullName>
    <label>Process Approval Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>