force-app/main/default/objects/Purchase_Request__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Requests</relationshipLabel>
    <relationshipName>Purchase_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>