force-app/main/default/objects/Purchase_Request__c/fields/Purchase_Request_Type_formula__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Request_Type_formula__c</fullName>
    <formula>TEXT( Creation_Type__c ) + IF(ISBLANK( Work_Order__c ), &apos; (Without Work Order)&apos;, &apos; (With Work Order)&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Request Type</label>
    <type>Text</type>
</CustomField>