force-app/main/default/objects/Purchase_Request__c/fields/Quote_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Item - Not Needed</label>
    <referenceTo>Quote_Item__c</referenceTo>
    <relationshipLabel>Purchase Requests</relationshipLabel>
    <relationshipName>Purchase_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>