force-app/main/default/objects/Purchase_Request__c/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <formula>TEXT( Quoted_Created__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Status - Not Needed</label>
    <type>Text</type>
</CustomField>